# Zetin-Humanoid-RL-Deploy

./: .gitattributes  .gitignore  README.md  pyproject.toml
assets/Tron1-P/: robot.xml
assets/Tron1-P/meshes/: abad_L_Link.STL  abad_R_Link.STL  base_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
assets/Tron1-S/: robot.xml
assets/Tron1-S/meshes/: abad_L_Link.STL  abad_R_Link.STL  ankle_L_Link.STL  ankle_R_Link.STL  base_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
models/: model_1200.onnx  model_1200.pt  model_1800.onnx  model_1800.pt  model_2400.onnx  model_2400.pt  model_3000.onnx  model_3000.pt  model_4000.onnx  model_4000.pt  model_900.onnx  model_900.pt  tron1_0_s_flat_.onnx  tron1_0_s_flat_.pt  tron1_0_s_flat_2.onnx  tron1_0_s_flat_2.pt  tron1_0_s_rough.onnx  tron1_0_s_rough.pt  tron1_s_flat.onnx  tron1_s_flat.pt  tron1_s_flat_gait.onnx  tron1_s_flat_gait.pt  tron1_s_rough.onnx  tron1_s_rough.pt
scripts/: all_in_one.py  all_in_one_np.py  controller.py  export_onnx.py  main.py  simulator.py  simulator2.py  web_stream.py
source/Policy-Runner/: pyproject.toml
source/Policy-Runner/policy_runner/: __init__.py  math_utils.py  policy_runner.py
source/robofsm/: pyproject.toml
source/robofsm/robofsm/bipedal/: node.py  rl_policy.py  robot_state.py
source/robofsm/robofsm/fsm/: node.py
source/robofsm/robofsm/utils/: buffer.py  math.py
source/robofsm_np/: main.py  pyproject.toml
source/robofsm_np/robofsm_np/bipedal/: __init__.py  node.py  rl_policy.py  robot_state.py
source/robofsm_np/robofsm_np/fsm/: __init__.py  robot_state.py
source/robofsm_np/robofsm_np/utils/: __init__.py  buffer.py  math.py
