[project]
name = "Zetin-Humanoid-RL-Deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "mujoco>=3.10.0",
    "numpy>=2.4.6",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.0",
    "opencv-python-headless>=4.13.0.92",
    "policy-runner",
    "simple-rl",
    "torch>=2.12.1",
    "typer>=0.26.7",
]

[tool.uv.workspace]
members = [
    "source/Policy-Runner",
]

[tool.uv.sources]
simple-rl = { git = "https://github.com/chanjun-nyam/Simple-RL.git" }
policy-runner = { workspace = true }
