[project]
name = "Zetin-Humanoid-RL-Deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "mujoco>=3.10.0",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "robofsm",
]

[tool.uv.workspace]
members = [
    "source/robofsm",
]

[tool.uv.sources]
robofsm = { workspace = true, editable = true }
